isEmpty()に置き換え